deploy/infrastructure/app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-app
  namespace: nt531-env
spec:
  replicas: 2
  selector:
    matchLabels:
      app: processing
  template:
    metadata:
      labels:
        app: processing
    spec:
      containers:
      - name: fastapi-app
        image: target-app:v2
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe: 
          httpGet:
            path: /metrics
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: target-app-service
  namespace: nt531-env
spec:
  selector:
    app: processing
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
